// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CAspectRatio /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-aspect-ratio css-w9t1xc"
  >
    <img
      alt="img"
      src="https://bit.ly/naruto-sage"
    />
  </div>
</DocumentFragment>
`;

exports[`<CBadge /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-badge css-1f1oimr"
  >
    this is a badge
  </div>
</DocumentFragment>
`;

exports[`<CBox /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-box css-2sy3sl"
  >
     This is a div 
  </div>
  <section
    class="uniland-box css-2sy3sl"
  >
     This is a box with as="section" 
  </section>
</DocumentFragment>
`;

exports[`<CCenter /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-center css-40w18w"
  >
     C 
  </div>
</DocumentFragment>
`;

exports[`<CContainer /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-container css-1v8lbpd"
  >
     container 
  </div>
</DocumentFragment>
`;

exports[`<CDivider /> should render properly 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="horizontal"
    class="uniland-divider css-1y71u2e"
  />
  <div
    class="uniland-center css-1yj0ggl"
  >
    <hr
      aria-orientation="vertical"
      class="uniland-divider css-1psxsf8"
    />
  </div>
</DocumentFragment>
`;

exports[`<CGrid /> & <CGridItem /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-grid css-ssvt16"
  >
    <div
      class="uniland-box css-62u0by"
    >
      <!---->
    </div>
    <div
      class="uniland-box css-62u0by"
    >
      <!---->
    </div>
    <div
      class="uniland-box css-62u0by"
    >
      <!---->
    </div>
    <div
      class="uniland-box css-62u0by"
    >
      <!---->
    </div>
    <div
      class="uniland-box css-62u0by"
    >
      <!---->
    </div>
  </div>
  <div
    class="uniland-grid css-85u0uj"
  >
    <div
      class="uniland-grid__item css-1q1m6d7"
    />
    <div
      class="uniland-grid__item css-1qvc0pb"
    />
    <div
      class="uniland-grid__item css-1qvc0pb"
    />
    <div
      class="uniland-grid__item css-1anmq07"
    />
  </div>
</DocumentFragment>
`;

exports[`<CHeading /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-stack css-17kdbol"
  >
    <h1
      class="uniland-heading css-cule"
    >
      (4xl) In love with Vue & Vite & Nuxt
    </h1>
    <h2
      class="uniland-heading css-15xpjkx"
    >
       (3xl) In love with Vue & Vite & Nuxt
    </h2>
    <h2
      class="uniland-heading css-1dpg06m"
    >
      (2xl) In love with Vue & Vite & Nuxt
    </h2>
    <h2
      class="uniland-heading css-ueokap"
    >
       (xl) In love with Vue & Vite & Nuxt 
    </h2>
    <h3
      class="uniland-heading css-1q5o9wg"
    >
       (lg) In love with Vue & Vite & Nuxt 
    </h3>
    <h4
      class="uniland-heading css-528rta"
    >
       (md) In love with Vue & Vite & Nuxt 
    </h4>
    <h5
      class="uniland-heading css-s5h6tf"
    >
       (sm) In love with Vue & Vite & Nuxt 
    </h5>
    <h6
      class="uniland-heading css-ngsgu1"
    >
       (xs) In love with Vue & Vite & Nuxt 
    </h6>
  </div>
</DocumentFragment>
`;

exports[`<CKbd /> should render properly 1`] = `
<DocumentFragment>
  <span>
    <kbd
      class="uniland-kbd css-1t0x8xj"
    >
      shift
    </kbd>
     + 
    <kbd
      class="uniland-kbd css-1t0x8xj"
    >
      H
    </kbd>
  </span>
</DocumentFragment>
`;

exports[`<CLink /> should render properly 1`] = `
<DocumentFragment>
  <a
    class="uniland-link css-8jj5m5"
  >
    CLink
  </a>
  <a
    class="uniland-link css-8jj5m5"
    rel="noopener noreferrer"
    target="_blank"
  >
    CLink external
  </a>
</DocumentFragment>
`;

exports[`<CLinkBox /> <CLinkOverlay /> should render properly 1`] = `
<DocumentFragment>
  <article
    class="uniland-linkbox css-10n1vic"
  >
    <h2
      class="uniland-heading css-1bhhtxl"
    >
      <a
        class="uniland-linkbox__overlay css-1hnz6hu"
        href="https://vue.uniland-ui.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Some blog post
      </a>
    </h2>
    <p>
       As a side note, using quotation marks around an attribute value is required only if this value is not a valid identifier. 
    </p>
    <a
      class="uniland-link css-8jj5m5"
      href="https://google.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Some inner link
    </a>
  </article>
</DocumentFragment>
`;

exports[`<CList /> <CListItem /> <CUnorderedList /> <COrderedList /> <CListIcon />  should render properly 1`] = `
<DocumentFragment>
  <ul
    class="uniland-list css-1dg6mvm"
    role="list"
  >
    <li
      class="uniland-list__item css-0"
    >
      Lorem ipsum dolor sit amet
    </li>
    <li
      class="uniland-list__item css-0"
    >
      Facilisis in pretium nisl aliquet
    </li>
  </ul>
  <ul
    class="uniland-list css-tu0njr"
    role="list"
  >
    <li
      class="uniland-list__item css-0"
    >
      Lorem ipsum dolor sit amet
    </li>
    <li
      class="uniland-list__item css-0"
    >
      Consectetur adipiscing elit
    </li>
  </ul>
  <ul
    class="uniland-list css-155za0w"
    role="list"
  >
    <li
      class="uniland-list__item css-0"
    >
      <svg
        class="uniland-icon css-a2vvhw"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="round"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokelinecap="round"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
  
      </svg>
       Lorem ipsum dolor sit amet. 
    </li>
    <li
      class="uniland-list__item css-0"
    >
      <svg
        class="uniland-icon css-a2vvhw"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="round"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokelinecap="round"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
  
      </svg>
       Facilisis in pretium nisl aliquet 
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<CSimpleGrid /> should render properly 1`] = `
<DocumentFragment>
  <ul
    class="uniland-simple-grid css-12tmpmw"
  >
    <div
      class="uniland-box css-9rloc5"
    >
      simple 1
    </div>
    <div
      class="uniland-box css-9rloc5"
    >
      simple 2
    </div>
    <div
      class="uniland-box css-9rloc5"
    >
      simple 3
    </div>
    <div
      class="uniland-box css-9rloc5"
    >
      simple 4
    </div>
    <div
      class="uniland-box css-9rloc5"
    >
      simple 5
    </div>
  </ul>
</DocumentFragment>
`;

exports[`<CSpacer /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-flex css-1xhj18k"
  >
    <div
      class="uniland-box css-zzdd9b"
    >
       Box 1 
    </div>
    <div
      class="uniland-spacer css-17xejub"
    />
    <div
      class="uniland-box css-pp1cg2"
    >
       Box 2 
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CSquare /> & <CCircle /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-square css-yh3vrj"
  >
     S 
  </div>
  <div
    class="uniland-circle css-1afsfyy"
  >
     C 
  </div>
</DocumentFragment>
`;

exports[`<CStack /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-stack css-n21gh5"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="uniland-stack-horizontal css-x9juev"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="uniland-stack-vertical css-n21gh5"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CText /> should render properly 1`] = `
<DocumentFragment>
  <p
    class="uniland-text css-0"
  >
    normal:
  </p>
  <p
    class="uniland-text css-n2bes8"
  >
    (6xl) In love with Vue & Vite & Nuxt
  </p>
  <p
    class="uniland-text css-0"
  >
    truncated:
  </p>
  <p
    class="uniland-text css-3urtkt"
  >
     Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. 
  </p>
  <p
    class="uniland-text css-0"
  >
    line clamp:
  </p>
  <p
    class="uniland-text css-3jijpv"
  >
     "The quick brown fox jumps over the lazy dog" is an English-language pangram—a sentence that contains all of the letters of the English alphabet. Owing to its existence, Uniland was created. 
  </p>
</DocumentFragment>
`;

exports[`<CWrap /> & <CWrapItem /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="uniland-wrap css-0"
  >
    <ul
      class="uniland-wrap__list css-gbdy1k"
    >
      <li
        class="uniland-wrap__listItem css-1yp4ln"
      >
        <div
          class="uniland-center css-58a5xs"
        >
           Box 1 
        </div>
      </li>
      <li
        class="uniland-wrap__listItem css-1yp4ln"
      >
        <div
          class="uniland-center css-1cf3c28"
        >
           Box 2 
        </div>
      </li>
      <li
        class="uniland-wrap__listItem css-1yp4ln"
      >
        <div
          class="uniland-center css-1un2hvj"
        >
           Box 3 
        </div>
      </li>
      <li
        class="uniland-wrap__listItem css-1yp4ln"
      >
        <div
          class="uniland-center css-dd3w5r"
        >
           Box 4 
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
